--- a/IhalematikPro/Forms/Calisan/frm_CalisanTanimlama.resx
+++ b/IhalematikPro/Forms/Calisan/frm_CalisanTanimlama.resx
@@ -5503,4 +5503,7 @@
         5wDlrfsnT6MAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="dxErrorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
