calisan tanimlama performans

--- a/IhalematikPro/Forms/Calisan/frm_CalisanTanimlama.resx
+++ b/IhalematikPro/Forms/Calisan/frm_CalisanTanimlama.resx
@@ -5465,7 +5465,7 @@
         CAA7
 </value>
   </data>
-  <data name="btnSil.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnPasive.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAARdEVYdFRpdGxlAERvd247QXJyb3c7vfyCWAAAAsBJ
