--- a/IhalematikPro/Forms/Poz/frm_PozListesi.resx
+++ b/IhalematikPro/Forms/Poz/frm_PozListesi.resx
@@ -5465,6 +5465,9 @@
         CAA7
 </value>
   </data>
+  <metadata name="dxErrorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
+  </metadata>
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
