Araç tanımlama formundaki AKTİF PASİF buttonlarının kodlaması yazıldı :))

--- a/IhalematikPro/Forms/Arac/frm_AracTanimlama.resx
+++ b/IhalematikPro/Forms/Arac/frm_AracTanimlama.resx
@@ -5501,7 +5501,7 @@
         RK5CYII=
 </value>
   </data>
-  <data name="repositoryItemButtonEdit1.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnActive.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAADB0RVh0VGl0
         bGUAREI7U291cmNlO1N0b3I7ZGF0YXNvdXJjZTtEYXRhYmFzZTtBZGQ7TmV3Ivv6ywAAAspJREFUOE99
