tedarikçi formları düzenlendi

--- a/IhalematikPro/Forms/Tedarikci/frm_GonderilecekMalzemeListesi.resx
+++ b/IhalematikPro/Forms/Tedarikci/frm_GonderilecekMalzemeListesi.resx
@@ -140,4 +140,19 @@
         8j91kUbX3K/WKgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="rpstRemove.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAIMSURBVDhPY8AGpFzEOX2OOLe5brIthQoRD6ymG7uF3vW+E3LH67d6ipICVJgwUIlXEA+45L4s
+        5K7Xv+C7nv/9L7ktg0rhB3wqPIxO661TgRrfgTQG3QFhj/+Bt91fB9xy2+Oy27rDoE3LTdxJhA2qBRXY
+        zDfNCYZpgmj8H3Db7b8/CN9y/e93y+W/LxD73HR+63LUplcxUVYCqhUC9Ko0bQJvuX9DaARpgml0BmkE
+        Yqf/3jcd/3vdcPzvecPho9Uao2iodggwatWx97vh+gGkEWQbWON1oCYQBmqCagRi+/8e1+3/u1+3+2e5
+        zjAeqh0CtMvUDH2uOb+E2Ob0X69JQ0PSVUxCJU3B2mKRYbX7Jbt7QI3/3a7b/ne7ZvPf9ZrNB6lAMX6o
+        dghQTVdQ87ri8MALaJvhZG0UZwoa87PZ7Tab63rN+r8LEDtftfqv268WBZVGALkwKRn3i3ZXnY5ZzoQK
+        wQG/Li+L8yWrm05XLf87XbH8b7RUuxEqhQokPESFbbaZFkC5KMB8o/4kxysW/x2umP83mK9VAxUmHtgc
+        M14G0uxw2fy/apWCC1SYOKCQI6MM1PwNZIDdWbMzPJrcjFApwkA2UVLK/rLZVZBm+wtmD+QSpZSgUoSB
+        7lQ1b6DGZ/aXzH5Z7TGaK+EtIgKVwg8kg0SlbE+aTrU5bLJOb7JGrmSgmBRUCgoYGACK8eiWt+7bpgAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
 </root>
