Formlar arasındaki geçişler yeniden düzenlendi

--- a/IhalematikPro/Forms/Arac/frm_AracTanimlama.resx
+++ b/IhalematikPro/Forms/Arac/frm_AracTanimlama.resx
@@ -5487,9 +5487,86 @@
         8j91kUbX3K/WKgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnKaydet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAABvhJREFUWEe1
+        lgtQU2cahuns7KWzMzutuF6mdpjFwXZX0dYr9VKLbB2KbqsdrZZFF7tir2t3qmy7FSqKRV2XqlQuBZVA
+        AoQkECDEILeQgAg0QZEoMGgLyyXL9RACtHJ79/t/D7jpYlbt+M48M8l/vv973/znm5zjMqEdqnr3wMwG
+        +YZ4o/4jtVk/NDyiHxsb138/MqofvD3CuU2fx8fH9QDuyfDomP7IRYveN1avD1BY1DtVDbsClPU/FW3u
+        rQBlXXlQdiN8Y4rwXvpl6nVHG2ML8dLpPM6Xhjpx1bkOaKp5/Z6sGyBzos7sr7gxQ7SaWv7p14Xd6nr4
+        nNYhSGYUWwHro3RYeSKHc6q4Vlx1ro/VVbz+zxkWUN8JqvxTa34p2v2vtqfVCm9l3sCayGwESorFVoA3
+        fV8aoeREFlwVV51rn/ISr9+lrAH1xTv0Iw4eTMAOSVXO7pjCn4iWjnojtUYIVFngdVSJgLMXxVbAqmNK
+        LApL4RzXmcRV5/pQbuD1O+XVCKRbmv7sfMhnzkTKug0IPpwUK1o6aovsirBTcQ1LwlOxPS5XbAWsCE/B
+        bw8kco5qK8VV5/pAVsTrA9O+RrTfVsQ9+STOTZuGZFdXZHo8A9Vqn2DR9q5eTzYLAfKrWHw4BdtiNWIr
+        4IuLJkTkVnIKrjeJq871vrSQB4jRlkKflYUkb29EU4h4CpFIIdJnzUKBh4dG5+4+U7R3cdkkqRL806p5
+        gMVhUjR2CGK7B5O1bwBrjsrhdyweXRVhaDSrcd1iQX5YGGJmzEAchThHIaTTp0M9Z06VaO/i8ur5CmF7
+        iokHYOnnhyRiOR3/g7IgVALPkPOoLjyM/tId6M5bhfZLf0Vby03UGwxI9vJCDJ1GAgWRuLrmifYuLhvP
+        lguvSyrwhzjd5D1/WM6kRMJ+aTd68tehU/M7tGfMQKvGE9/WavBNYyNy9+5FtKurLWH27N+I9i4ufvGl
+        AoFAhRl7MswIUpkeiuPaAvSXvw+h0BeduZ7o0DyLNuUTaFO5ovPCUjQUBcNsqkS+NCVEtL4j3ziDQODH
+        sCmhCLeMn6Kv+DUyX4iuC8tgVT9NAX6FLu3ztLYA7Zkzkav4E/alFqwVre9ofUyxQODHkKU9CVvJG2S8
+        BN265dy0PWM6OnLm0Sy8gH9nz0W9wg1b4jLxSswPAvz+TKFA4GH5VJaCfiMbupX86HsLXiZjD1gzZ6M3
+        3wed2ufo81P4W0IEr/c5U+gYYF1UvkDgYdhM/xutJe/S0Hlz077iTTyIVT2HD2LPxdW0/gzSpFsn93hH
+        5TsGoKeXMPHUe1CKtKHopaFj5kKRHwV4lc9At86LhvEVfktqVEvgG5U1uWftKZ1jgBdPXhAIPChh0nPi
+        0C1Al24Z7GVv0ZGv46a2ki10Ai/BqlmAoJgoh31rvtA6BlgdqREI7EktQ861ZlywtNwXDaZ09Fz+BB10
+        3wcr9pLpNn78NsM2Oo2NdAor0GSK4LWxxjoyzgXzWfVPjWOAlSeyBQLNPXbxT/X+ZKtTQKg5C9v1JNhN
+        n5HpBv7LbYY3aRB90Fu6HeNjw2I1PapVFfSukI0X/pHtGMDruFog0G3/jhf2CHY0Nln/L73XktBnSYat
+        QYH+Wzmw1Z6EvfxdPogdurWot5Shua2T92QKya4C81lxTO0YYPnRDIGYDNDW0YOva286p6YeQm0i+urS
+        YLupRn+TDgOtegy05KHvchD+VR3P62obmnlPpgNZlWA+yyJUjgGWfq4UCHSJAe5Hba3NOHUoCC3VUvR/
+        q4W9pQgD1ksY6r6K4SEr6AVWrLyrv6svg/ksOaJwDLA4XC4QFGCIF7LjzTNeccqpWAlm0bPdY64bCtWn
+        YWs1wmQyQmeocqgrNd3gPZk+ySgH83k+XO4Y4LlDqQIxGWBw6Ht09fY7JTFJCnd3d7i5ueGz0AOw221T
+        1vXaBnhPpo9VZWA+iw6lOgbwPCgTiMkAY2NjGBkddcpXX8Vj//5g3Lr1zZTXJxgdHeM9mYKVpWA+ngel
+        jgHmhyYLBLr67wRggyPPLXNKqsY45foP0ZaYeU+m/QojmM/80CTHAPQiIbCXiU4xwKPSPnnJxIvL1AFu
+        GiIhVJ54ZPwlOm7qAAtDEq+wC19GvY3zZ3Y9MjaHH2fmo36fS9y4sUwm+1lisnRuRHzyOy8fkVhXHUoc
+        JL4jbhPDxIjI6Oq7jN0Dfp3V/tc+1oP1Yj0HXzycKHwYlRSdIJHOk0qlP2cBfk18QCQThYSZaCCaiHai
+        k+ghBMJG9BN2kQGRie8MVtNHsD1sL+vRTLCe1UQxwfQRMZsFeIz4BTGNeIrwIBYSK4i1xHpiI7GZ2Eq8
+        SfyRCCACRdhntuZPsBpWy/awvawH67WImEfMIZjX4zKZ7LH/AGgMqOaDWT2MAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnTemizle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAABL1JREFUWEfd
+        l3tQVFUcx5ddXgIii4I8WpBdhBUWBBlgUkQNTbIyMRsnxyRBHYxW0LTRGUopKxmdMmdMHcUQBkQexba4
+        DkKaEm9BWJ4BIg8BQdDJzDB299vvzJz+LRqX/aPPzGfund89v3N+93fP3rkr+N+iOrDcIkepWJq/O9Se
+        h0xLZuL8wzUnkwx5ypChzO0yKQ+bhtzkhQHXj25+dvOTzciN89d9GycJ4JdMw8UkRVntcSWKEyJxdsvc
+        b3jYNGQnypeWH401lO6JRmbsvJHs7b6O/JJpyNopK6g8Eo+iHeE4v9X9HR42DbnvBzhcTnl5oiRpFdK3
+        uJXxsOlIj3d/90bqJlyKV+guxHuZduMxshLml1zdswbntrik85DpyNjmFqjevcyQG6fQZ8Z5efCwadB8
+        5mKevVOSfUW5Eudj3cp52DSoD8yNuXFOPFpxSqovSghGlnJ2Mr80vVxZ6xWmWRP0cXW662+POxfg1045
+        en+WGAo+st/Hh0wP6jTrYPVhmxMla6Uj7VFR0G58HT0ZIZjoCwEr5Npphzt8qPHJOyhaV5kjmhyoc8S4
+        1hu3E3xQL5OiOWIJWlLC8KQ7EGUnxE18uHHRHBc5aL4Wjt6pnIHRZgn+6A2Gbng1ejNXojpQhia5HHVb
+        /VCYKN7PU4xL9n7RrvZrIsNAnRgP23wwORgJ/cgm6MeU+L0rFi17g1Erm4criyTT8w5QpVlUdlfYoa3E
+        CWPN/hiqjYD+wXvQP0yh4zbohlZhsFQO1ZtzcniK8chPtVvVpPGc1Gqs8EupJ571hWKk4SXcrVhPHfiA
+        OvE2Ju8twaN2b2iO2d7iacbh6ikPM1Wac11PjQz13znjUUcABir8ob8fg96KaPRVrKa9EI2nd4Mw0uSO
+        H9Ism3mqccg75KzsrooyNKis0FvzIsZbZegqDYJ++BVaOAb3qhej+0c5FeaN/joHqI5YnuGpz09+qqtf
+        TWH4k5YyBRrU/hhsXID2Eime9q2BbjAC480R+HMgHP2VUtQXilFXYKkv+sIqiKc/P5l7HXfcvRU9efWU
+        Owa0q1Gda4f++hg87grEA20ovf2Wkb7oKXdBT6UtLn9pfpqnGoecQ27W55NsO1qvLdfVq+bhdnEYRtuX
+        436jF0bb3sJYqxRa9RxoNTNQdVGk/ypRtJCnGo/EGHv7Cyku35edcTYMtqxDd7kTOm9GYaQtEtriWWhU
+        W6GlRIS0eOHnPMV4iO3MhJ4u5hZ+HiKnDzfane244aOvuuSH4bYNaCgS0yMRobVUiIObzYqtzAUulDLb
+        jNLoOJO0Ia1Ic5LCU4cNtiRtSTaZM+luYynwT37NouhO7auTbddDcP2cEE2Xhdi3wUxjaS5YRGMU5ALS
+        h2R/RNhHiSs5m2T/jqxJEfmvsMXtSPY5zSbwJL1JNnngrvWzsgs+tdb9lCGcWBsqOEmxFWQkuZgMJdmv
+        wJ/0Jb1Id9KJnEXOIIXkP8IGsGpZ1XNIN/LvIuSkwmmmYIXEUfAGnYdwWQfYwuxD1I+cT7LFXyBZB1kn
+        WUctyCnDCmEJrGr2TNkk7E7Ys2ZFscmZEn5kd8o6xhZkbWd3zBZl+2BKrZ8KbH+wwphsUrbBmOycyeL/
+        YcMJBH8BrMEMs7uRNAkAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="dxErrorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="btnGuncelle.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAmBJREFUOE9j
+        wAeYGBkZfMXF+R+5uV164uFxqFZdXYWTCSRKBACp0tRQZzqfmbHsoYvL38dubn+fuLt/2GltnazJw0PY
+        EGagRZt7g6PePLj898msmf8eenj8e+Tq+u8J0KA7rq5rTQQEWKFKMQET0Pg0d3Hxj4s1nr1caPjvxdml
+        /1+ePPH/cWLif6Br/j10df0cICkpCFWOCkBuU5dmZ3wxV3PDmzmKf59Nk/73YKL4/4frU/6/unf13/MJ
+        /X93WFsXcDEzY/cFOysj4/5m5ZS3c5X+Pp8u/e/pVMn/DyaI/H8GZN+fbfTv3un1p+2trTiw6gY5vSpY
+        VOXdfJUPIM0vZkj/fzRJ7P+TKRL/n02T+nevX+xtrjuvPDAioDqQAMjpZiocLK/nqh5+MUP238uZsv+A
+        hvx/PFn8P4j9aJL431W5fDGszAzYnc7Lych4ukO++uUsObDT38xR+A9y/qtZcv+eTZf6e7lDZIWCCI40
+        ABJuyrA1eDVH6dvTqVL/3s9XAmkEawbhR5MlHkVacghjczkYMAMjfd/ePfWfbm39+36F+b/3C1T+v54t
+        ///dPEWQN37PSRNwZ2aCKsYGWFhYGG/dujn354/v/769e/z/w86U/x8Wqv17NVvh7/kO8UlifASSLxsb
+        G+OnT592/vjx49+3b1//ff708d/7Cwv/PpujdcVdn4MLv24g4OTkZKqsrLx+8eLFf1++fPn37t3bPxcu
+        nF+dEOmnhNPfyABkgLa29icjI6M/S5cu3VZaWmoqKirKiDW+sQFeXl4xdXX1/RISEvYg7wABVIYQYGAA
+        AGM9D5EWrewqAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnSil.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAXZJREFUOE+V
